# glamira_project

./: .gitignore  pyproject.toml
config/: config.yaml
etl/export/: export_mongo_to_gcs.py
etl/extract/: build_raw_schema.py  crawl_product_names.py  extract_distinct_products.py  extract_unique_ips.py
etl/load/: load_gcs_to_bigquery.py  load_product_names_to_mongo.py  load_to_bigquery.py  mongo_loader.py
etl/transform/: clean_product_names.py  ip_cleaner.py  ip_to_location.py  select_best_product_url.py
pipelines/: ip_location_pipeline.py
schemas/: raw_events_schema.json
